--- a/style.css
+++ b/style.css
@@ -5,16 +5,18 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: black;
 }
 
 #input,
 #output {
-  border: 1px solid yellow;
-  background: black;
+  background: brown;
   color: white;
   padding: 10px;
   border-radius: 10px;
   margin-bottom: 20px;
+  outline: none;
+  border: none;
 }
 
 #btn,
@@ -23,6 +25,10 @@ body {
   padding: 10px 20px;
   border-radius: 10px;
   font-size: 19px;
+  background: white;
+  color: black;
+  border: 1px solid white;
+  font-weight: bold;
 }
 
 #display {
@@ -40,11 +46,14 @@ blockquote {
 
 h1 {
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
+  color: white;
 }
 
 label {
-  margin-bottom: 5px;
+  margin-bottom: 15px;
+  color: white;
+  text-transform: uppercase;
 }
 
 #count {
